--- a/tcf_website/templates/reviews/zero_hours_modal.html
+++ b/tcf_website/templates/reviews/zero_hours_modal.html
@@ -9,9 +9,11 @@
         </button>
       </div>
       <div class="modal-body">
-          It looks like you submitted zero total hours of work per week for this class. Please double check
-          that the class you are reviewing truly does not require any outside work as this is valuable
+          It looks like you submitted zero total hours of work per week for this class. Please double-check
+          that the class you are reviewing truly does not require any outside work, as this is valuable
           information for other students evaluating the class.
+          <br>
+          <br>
           <div class="row justify-content-center">
             <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
           </div>
