--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -12,6 +12,8 @@
         {% include "../common/notification.html" %}
     </div> {% endcomment %}
     <div class="browse container">
+        {% include "../common/marketing_application_banner.html" %}
+        <br/>
         {% include "../common/leaderboard_ad.html" with ad_slot="9691204298" %}
 
         <!-- Browse page content -->
@@ -19,7 +21,7 @@
         <div class="schools text-left">
 
         {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all %}
-        
+
         {% include "browse/school.html" with school_name=SEAS.name departments=SEAS.department_set.all id="SEAS"%}
 
         {% include "browse/grouped_schools.html" with school_name="Other Schools at the University of Virginia" schools=other_schools misc=misc_school%}
