Fixed wording on banner

--- a/tcf_website/templates/common/marketing_application_banner.html
+++ b/tcf_website/templates/common/marketing_application_banner.html
@@ -2,8 +2,8 @@
      class="alert alert-info alert-dismissible text-left fade show">
   <h4 class="alert-heading">Apply to the marketing team!</h4>
   <p>
-    Our Fall 2021 recruitment for the marketing has started up! Applications will be open from 10/26 to 11/09. We are looking for UVA students
-    for the marketing team who are committed to helping make the site better. Students of any year,
+    Our Fall 2021 recruitment for the marketing team has started up! Applications will be open from 10/26 to 11/09. We are looking for UVA students
+    who are committed to helping make the site better. Students of any year,
     background, and experience are welcome to apply.
   </p>
   <hr>
