--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -27,8 +27,25 @@
         <h4 class="text-tcf-indigo ml-2">theCourseForum</h4>
       </a>
       <!-- tCF profile dropdown -->
-      {% include "base/profile_menu.html" %}
-
+      <div class="account-settings">
+        {% if user.is_authenticated %}
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+            Hey, {{user.first_name}}!
+          </a>
+          <div class="dropdown-menu settings" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+            <a class="dropdown-item" href="{% url 'reviews' %}">My Reviews</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+          </div>
+        </div>
+        {% else %}
+        <div class="nav-item">
+          <a class="nav-link" href="#loginModal" data-toggle="modal">Sign In</a>
+        </div>
+      {% endif %}
+      </div>
     </div>
   </nav>
 
