--- a/tcf_website/templates/common/rating_card.html
+++ b/tcf_website/templates/common/rating_card.html
@@ -54,13 +54,13 @@
                 <div class="mb-0 info" id="times">
                   {% if times %}
                       {% for section, time_list in times.items %}
-                      <span style="font-size: 20px; margin: 0; padding-right: 10px;"
+                      <span style="font-size: 20px; margin: 0; display: flex; align-items: center; gap: 4px;"
                             data-toggle="tooltip"
                             data-html="true"
                             data-placement='right'
                             title=" {% for time in time_list %}
                                     <span>{{ time }}</span>
-                                    {% endfor %}">{{ section }}</span><br>
+                                    {% endfor %}">{{ section }} <i class="far fa-question-circle" style="font-size: 12px;"></i></span>
                       {% endfor %}
                   {% else %}
                     &mdash;
